# hackathon

./: DEPLOY-AZURE.md  README.md
.github/workflows/: deploy-backend.yml
backend/: .env  .env.example  package-lock.json  package.json  tsconfig.json
backend/contracts-artifacts/: PrivacyPass.json
backend/src/: server.ts
backend/src/blockchain/: contract.ts
backend/src/config/: db.ts
backend/src/middleware/: auth.ts  rateLimit.ts
backend/src/models/: ActivityTimeline.ts  Credential.ts  Issuer.ts  User.ts  UserIdentity.ts  VerificationLog.ts
backend/src/routes/: credentials.ts  identity.ts
backend/src/utils/: crypto.ts
backend/src/zk/: zkService.ts
contracts/: .env  .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: PrivacyPass.sol
contracts/deployments/: PrivacyPass.json
contracts/scripts/: authorize-issuer.ts  deploy.ts
contracts/typechain-types/: PrivacyPass.ts  hardhat.d.ts  index.ts
contracts/typechain-types/factories/: PrivacyPass__factory.ts  index.ts
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend-rust/: Cargo.toml  Trunk.toml  index.html
frontend-rust/src/: main.rs
frontend/src/: App.tsx  styles.css
frontend/src/animations/: ScrollAnimations.ts  gsapAnimations.ts
frontend/src/api/: client.ts
frontend/src/components/: ActivityFeed.tsx  AnimatedCard.tsx  BlockchainNetworkScene.tsx  DashboardCard.tsx  DisconnectModal.tsx  IdentityShieldScene.tsx  IssuerDocsPanels.tsx  (+9 more)
(+18 files in other folders)
